apps/apps-portal/apps-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-portal-ingress
  namespace: apps-portal
spec:
  ingressClassName: nginx
  rules:
    - host: apps.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apps-portal
                port:
                  number: 80
